some build system stuff, setting up debug and multiplatform builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,13 @@ include_directories(src)
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 add_executable(${PROJECT_NAME} ${SOURCES})
 
+if (UNIX)
 target_link_options(${PROJECT_NAME} PRIVATE -lvulkan -ldl -lpthread -lX11 -lXxf86vm -lXrandr -lXi)
-target_compile_options(${PROJECT_NAME} PRIVATE -std=c++17 -O0 -g)
+endif (UNIX)
+
+target_compile_options(${PROJECT_NAME} PRIVATE -std=c++17 $<$<CONFIG:DEBUG>:-O0;-g3;-ggdb>)
+
+target_compile_definitions(${PROJECT_NAME} PRIVATE $<$<CONFIG:Debug>: DEBUG>)
 
 add_subdirectory(lib/bb-net-lib)
 target_link_libraries(${PROJECT_NAME} PRIVATE bbnetlib)
@@ -22,6 +27,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE glm)
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+set(OpenGL_GL_PREFERENCE GLVND)
 
 
 find_package(OpenGL REQUIRED)
