--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,15 +3,15 @@ cmake_minimum_required(VERSION 3.2)
 project(bb-vulkan-engine)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-include_directories(src)
-file(GLOB_RECURSE SOURCES "src/*.cpp")
+include_directories(src/engine)
+file(GLOB_RECURSE SOURCES "src/engine/*.cpp")
 add_executable(${PROJECT_NAME} ${SOURCES})
 
 if (UNIX)
 target_link_options(${PROJECT_NAME} PRIVATE -lvulkan -ldl -lpthread -lX11 -lXxf86vm -lXrandr -lXi)
 endif (UNIX)
 
-target_compile_options(${PROJECT_NAME} PRIVATE -std=c++17 $<$<CONFIG:DEBUG>:-O0;-g3;-ggdb>)
+target_compile_options(${PROJECT_NAME} PRIVATE -std=c++17 $<$<CONFIG:Debug>:-O0;-g3;-ggdb>)
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE $<$<CONFIG:Debug>: DEBUG>)
 
