--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,6 +30,8 @@ ${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_cleanup.hpp
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_cleanup.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_fileIO.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_fileIO.hpp
+${CMAKE_CURRENT_SOURCE_DIR}/engine/config_swap_chain.hpp
+${CMAKE_CURRENT_SOURCE_DIR}/engine/config_swap_chain.cpp
 )
 target_sources(testbin PRIVATE
 ${CMAKE_CURRENT_SOURCE_DIR}/testbin/Main.cpp
