--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,35 +1,35 @@
 target_sources(${PROJECT_NAME} PRIVATE
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_buffers.cpp   
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_draw_frame.hpp  
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_vertex.cpp              
+${CMAKE_CURRENT_SOURCE_DIR}/engine/buffers.cpp   
+${CMAKE_CURRENT_SOURCE_DIR}/engine/draw_frame.hpp  
+${CMAKE_CURRENT_SOURCE_DIR}/engine/vertex.cpp              
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/config_device.hpp
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_buffers.hpp    
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_model.cpp       
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_vertex.hpp              
+${CMAKE_CURRENT_SOURCE_DIR}/engine/buffers.hpp    
+${CMAKE_CURRENT_SOURCE_DIR}/engine/model.cpp       
+${CMAKE_CURRENT_SOURCE_DIR}/engine/vertex.hpp              
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/config_pipeline.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_command_buffers.cpp  
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_model.hpp       
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_window.cpp              
+${CMAKE_CURRENT_SOURCE_DIR}/engine/command_buffers.cpp  
+${CMAKE_CURRENT_SOURCE_DIR}/engine/model.hpp       
+${CMAKE_CURRENT_SOURCE_DIR}/engine/window.cpp              
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/config_pipeline.hpp
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_command_buffers.hpp  
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_pipeline.cpp    
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_window.hpp              
+${CMAKE_CURRENT_SOURCE_DIR}/engine/command_buffers.hpp  
+${CMAKE_CURRENT_SOURCE_DIR}/engine/pipeline.cpp    
+${CMAKE_CURRENT_SOURCE_DIR}/engine/window.hpp              
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/interface.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_device.cpp           
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_pipeline.hpp    
+${CMAKE_CURRENT_SOURCE_DIR}/engine/device.cpp           
+${CMAKE_CURRENT_SOURCE_DIR}/engine/pipeline.hpp    
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/config_command_buffers.cpp  
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/interface.hpp
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_device.hpp           
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_swap_chain.cpp  
+${CMAKE_CURRENT_SOURCE_DIR}/engine/device.hpp           
+${CMAKE_CURRENT_SOURCE_DIR}/engine/swap_chain.cpp  
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/config_command_buffers.hpp  
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_draw_frame.cpp       
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_swap_chain.hpp  
+${CMAKE_CURRENT_SOURCE_DIR}/engine/draw_frame.cpp       
+${CMAKE_CURRENT_SOURCE_DIR}/engine/swap_chain.hpp  
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/config_device.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_defines.hpp
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_cleanup.hpp
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_cleanup.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_fileIO.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/engine/bve_fileIO.hpp
+${CMAKE_CURRENT_SOURCE_DIR}/engine/defines.hpp
+${CMAKE_CURRENT_SOURCE_DIR}/engine/cleanup.hpp
+${CMAKE_CURRENT_SOURCE_DIR}/engine/cleanup.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/engine/fileIO.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/engine/fileIO.hpp
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/config_swap_chain.hpp
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/config_swap_chain.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/config_buffers.cpp
