--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,6 +34,8 @@ ${CMAKE_CURRENT_SOURCE_DIR}/engine/images.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/images.hpp
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/descriptor_sets.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/descriptor_sets.hpp
+${CMAKE_CURRENT_SOURCE_DIR}/engine/transform.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/engine/transform.hpp
 )
 target_sources(testbin PRIVATE
 ${CMAKE_CURRENT_SOURCE_DIR}/testbin/Main.cpp
