ugh I should have done out parameters

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,10 +36,12 @@ ${CMAKE_CURRENT_SOURCE_DIR}/engine/descriptor_sets.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/descriptor_sets.hpp
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/transform.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/transform.hpp
-${CMAKE_CURRENT_SOURCE_DIR}/engine/entity.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/engine/entity.hpp
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/main_loader.cpp
 ${CMAKE_CURRENT_SOURCE_DIR}/engine/main_loader.h
+${CMAKE_CURRENT_SOURCE_DIR}/engine/entity.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/engine/entity.h
+${CMAKE_CURRENT_SOURCE_DIR}/engine/error_handling.cpp
+${CMAKE_CURRENT_SOURCE_DIR}/engine/error_handling.h
 )
 target_sources(testbin PRIVATE
 ${CMAKE_CURRENT_SOURCE_DIR}/testbin/Main.cpp
